# spotdl

./: README.md  pyproject.toml
scripts/: build.py
spotdl/: __init__.py
spotdl/providers/lyrics/: genius.py
spotdl_rl/: __init__.py  __main__.py  _version.py  text.py
spotdl_rl/console/: __init__.py  download.py  entry_point.py  meta.py  save.py  sync.py  url.py
spotdl_rl/download/: downloader.py  progress_handler.py
spotdl_rl/providers/: __init__.py
spotdl_rl/providers/audio/: __init__.py  base.py  youtube.py  ytmusic.py
spotdl_rl/providers/lyrics/: __init__.py  azlyrics.py  genius.py  musixmatch.py  synced.py
spotdl_rl/providers/translate/: __init__.py  animesonglyrics.py  base.py  googletranslate.py  lyricstranslate.py  youtube_subs.py
spotdl_rl/types/: __init__.py  album.py  artist.py  options.py  playlist.py  saved.py  song.py
spotdl_rl/utils/: __init__.py  config.py  console.py  downloader.py  ffmpeg.py  formatter.py  github.py  logging.py  m3u.py  matching.py  metadata.py  search.py  spotify.py  web.py
spotdl_romanized_lyrics/: __init__.py
spotdl_romanized_lyrics/console/: entry_point.py
spotdl_romanized_lyrics/download/: downloader.py
spotdl_romanized_lyrics/providers/audio/: youtube.py  ytmusic.py
spotdl_romanized_lyrics/providers/lyrics/: azlyrics.py  base.py  genius.py
spotdl_romanized_lyrics/providers/translate/: animesonglyrics.py  base.py  googletranslate.py  lyricstranslate.py
spotdl_romanized_lyrics/types/: song.py
spotdl_romanized_lyrics/utils/: arguments.py  config.py
