[tool.poetry]
name = "spotdl_rl"
version = "0.0.6"
description = "Download your Spotify playlists and songs along with album art and metadata"
license = "MIT"
authors = ["aeska4444"]
readme = "README.md"
repository = "https://github.com/aeska4444/spotify-downloader.git"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.12"

spotipy = "^2.22.1"
ytmusicapi = [
    {version = "^0.22.0", python = "<3.8"},
    {version = "^0.24.0", python = ">=3.8"},
]
googletrans = "=3.1.0a0"
pytube = "^12.1.2"
yt-dlp = "^2023.3.3"
mutagen = "^1.46.0"
rich = "^13.3.1"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
rapidfuzz = "^2.13.7"
python-slugify = {extras = ["unidecode"], version = "^8.0.1"}
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
fastapi = "^0.89.1"
platformdirs = "^2.6.2"
pykakasi = "^2.2.1"
syncedlyrics = "^0.2.2"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-vcr = "^1.0.2"
pyfakefs = "^5.1.0"
pytest-cov = "^4.0.0"
pytest-subprocess = "^1.5.0"
pytest-asyncio = "^0.20.3"
mypy = "^0.991"
pylint = "^2.16.3"
black = "^22.12.0"
mdformat-gfm = "^0.3.5"
types-orjson = "^3.6.2"
types-python-slugify = "^7.0.0.1"
types-requests = "^2.28.11.15"
types-setuptools = "^65.7.0.4"
types-toml = "^0.10.8.5"
types-ujson = "^5.7.0.1"
pyinstaller = "^5.8.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.19.1"
mkdocstrings-python = "^0.8.3"
pymdown-extensions = "^9.9.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"

[tool.poetry.scripts]
spotdl_rl = "spotdl_rl:console_entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
limit-inference-results = 0
fail-under = 9

[mypy]
ignore_missing_imports = true
